# calibration

./: CMakeLists.txt  README.md  camera_tf.launch  package.xml  setup.py
bags/: cam1.bag  cam2.bag  cam3.bag  cam4.bag  surface_size_150_apriltag36h11_id_0_degree_0_cam1_2_3_4_5_2018-05-11-17-00-32.bag_speed_1_aruco3_node1_2.conservative_notTracking.bag  surface_size_150_apriltag36h11_id_0_degree_0_cam1_2_3_4_5_2018-05-11-17-00-32.bag_speed_1_aruco3_node2_2.conservative_notTracking.bag  surface_size_150_apriltag36h11_id_0_degree_0_cam1_2_3_4_5_2018-05-11-17-00-32.bag_speed_1_aruco3_node3_2.conservative_notTracking.bag  surface_size_150_apriltag36h11_id_0_degree_0_cam1_2_3_4_5_2018-05-11-17-00-32.bag_speed_1_aruco3_node4_2.conservative_notTracking.bag
cfg/: aruco_config.yaml
include/calib/: dynamic_transform_publisher.h
launch/: aruco3_test.launch  aruco3_test.launch___jb_old___  calibration_citrack.launch  calibration_demo.launch  calibration_dump.launch  calibration_load.launch  twb_camera_tf.launch
rviz/: calibration_demo.rviz  calibration_demo_marker10.rviz  fun_camera_marker_rviz.sh  print_camera_marker_rviz.sh
scripts/: cameracalibrator.sh  static_inverse_transform_publisher  static_inverse_transform_publisher_pose  static_transform_publisher_pose
src/: aruco3_test.cpp  calibrator.py  dynamic_transform_publisher_node.cpp  inverse_transform.py  one_shot_calib_node.cpp  yaml_handler.py
yaml/: calibration.yaml  calibration_citrack.yaml  tf_cam1_2.yaml  tf_cam2_2.yaml  tf_cam3_2.yaml  tf_cam4_2.yaml  tf_world_origin.yaml
